--- a/dive-into-deep-learning/pytorch/10-encoder-decoder/01_encoder_decoder.ipynb
+++ b/dive-into-deep-learning/pytorch/10-encoder-decoder/01_encoder_decoder.ipynb
@@ -42,7 +42,7 @@
         "id": "9f73f17b"
       },
       "source": [
-        "# The Encoder-Decoder Architecture\n",
+        "## The Encoder-Decoder Architecture\n",
         ":label:`sec_encoder-decoder`\n",
         "\n",
         "In general seq2seq problems\n",
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "9667c33d",
       "metadata": {
         "execution": {
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "60f1cb0c",
       "metadata": {
         "execution": {
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "b41f6031",
       "metadata": {
         "execution": {
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "4c7c6c48",
       "metadata": {
         "execution": {
