--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOBosItlaiBer7/r50YKBBg",
+      "authorship_tag": "ABX9TyOY5UG8Cg20zXnoJHNbraHz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1618,7 +1618,7 @@
         "dimensionality of both encoder and decoder (`d_model`).\n",
         "- A final linear layer to map the decoder’s outputs back to the original feature space (the coordinates we’re trying to predict).\n",
         "\n",
-        "We also need to make some small modifications to the encode() and decode()\n",
+        "We also need to make some small modifications to the `encode()` and `decode()`\n",
         "methods to account for the components above:\n"
       ],
       "metadata": {
@@ -1627,12 +1627,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class TransformerEncoderDecoder(EncoderDecoderSelfAttn):\n",
+        "  def __init__(self, encoder, decoder, input_ln, target_len, n_features):\n",
+        "    super(TransformerEncoderDecoder, self).__init__(encoder, decoder, input_len, target_len)\n",
+        "\n",
+        "    self.n_features = n_features\n",
+        "    # Projecting features to model dimensionality\n",
+        "    self.projection = nn.Linear(n_features, encoder.d_model)\n",
+        "    # Final linear transformation from model to feature space\n",
+        "    self.linear = nn.Linear(encoder.d_model, n_features)\n",
+        "\n",
+        "  def encode(self, source_seq, source_mask=None):\n",
+        "    # Projection\n",
+        "    source_projection = self.projection(source_seq)\n",
+        "    encoder_states = self.encoder(source_projection, source_mask)\n",
+        "    self.decoder.init_keys(encoder_states)\n",
+        "\n",
+        "  def decode(self, shifted_target_seq, source_mask=None, target_mask=None):\n",
+        "    # Projection\n",
+        "    target_projection = self.projection(shifted_target_seq)\n",
+        "    outputs = self.decoder(target_projection, source_mask=source_mask, target_mask=target_mask)\n",
+        "    # Linear\n",
+        "    outputs = self.linear(outputs)\n",
+        "    return outputs"
+      ],
       "metadata": {
         "id": "T6QN_jGv7mRa"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Data Preparation"
+      ],
+      "metadata": {
+        "id": "hcYaA2hh9mfE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "e-mg0LFm9n43"
+      }
     }
   ]
 }
