--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNNsxPfrgANHyoqmeFS3DG/",
+      "authorship_tag": "ABX9TyOWwxoe+IzknsjSUgK+sbIr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "tWAO0Hb3mjb-"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "cDf9HTfwCO31"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -368,7 +368,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,7 +590,7 @@
       "metadata": {
         "id": "Nh9IK0mk31zG"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -632,7 +632,7 @@
       "metadata": {
         "id": "BoyHSBzVwts9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -724,7 +724,7 @@
       "metadata": {
         "id": "vDj68K76vJZ9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +764,7 @@
       "metadata": {
         "id": "NABP2hmO1TdP"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -815,7 +815,7 @@
         "id": "lBY-HqQKKvln",
         "outputId": "83e7f946-4c78-47ea-8af7-1087730751e2"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +850,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,7 +905,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -955,7 +955,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1003,7 +1003,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1048,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,7 +1082,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1123,7 +1123,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1206,7 +1206,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1261,7 +1261,7 @@
           "height": 237
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1300,7 +1300,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1334,7 +1334,7 @@
           "height": 237
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1402,7 +1402,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1439,7 +1439,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1517,7 +1517,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1562,7 +1562,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1655,7 +1655,7 @@
       "metadata": {
         "id": "T6QN_jGv7mRa"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1717,7 +1717,7 @@
         "id": "JaX9fbUt_o53",
         "outputId": "302bdc37-e91a-4fd0-b368-51ba86b5ae5a"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1774,7 +1774,7 @@
       "metadata": {
         "id": "yCMgB23RAAAK"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1788,7 +1788,7 @@
       "metadata": {
         "id": "BCWBtc_zCPVN"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1801,7 +1801,7 @@
       "metadata": {
         "id": "wYrMOLeMCld7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1817,7 +1817,7 @@
         "id": "aanEzPlOC9KC",
         "outputId": "dcf4f881-846c-4b65-d8a1-33f96a763e4e"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1862,7 +1862,7 @@
         "id": "U_AvVqdzDSDx",
         "outputId": "5740b77e-6a77-4b21-f0b2-492b5c51abc3"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1890,7 +1890,7 @@
         "id": "XFLRbKiIDypF",
         "outputId": "42b84864-9da3-4b2f-9a88-fc4b9927bf20"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1928,7 +1928,7 @@
         "id": "gyo62S1eD5_w",
         "outputId": "120cacee-3b21-4d2f-ec37-e80e71f44868"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1953,10 +1953,99 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "PyTorch implements a full-fledged Transformer class of its own: `nn.Transformer`."
+      ],
       "metadata": {
         "id": "dhZKu66JEX9J"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TransformerModel(nn.Module):\n",
+        "  def __init__(self, transformer, input_len, target_len, n_features):\n",
+        "    super(self).__init__()\n",
+        "\n",
+        "    self.transformer = transformer\n",
+        "    self.input_len = input_len\n",
+        "    self.target_len = target_len\n",
+        "    self.target_masks = self.transformer.generate_square_subsequent_mask(self.target_len)\n",
+        "    self.n_features = n_features\n",
+        "\n",
+        "    # Projecting features to model dimensionality\n",
+        "    self.projection = nn.Linear(n_features, self.transformer.d_model)\n",
+        "    # Final linear transformation from model to feature space\n",
+        "    self.linear_layer = nn.Linear(self.transformer.d_model, n_features)\n",
+        "\n",
+        "    # Adding positional encoding and normalizing inputs\n",
+        "    max_len = max(self.input_len, self.target_len)\n",
+        "    self.positional_encoding = PositionalEncoding(max_len, self.transformer.d_model)\n",
+        "    self.norm_layer = nn.LayerNorm(self.transformer.d_model)\n",
+        "\n",
+        "  def preprocess(self, seq):\n",
+        "    seq_projection = self.projection(seq)\n",
+        "    seq_encoder = self.positional_encoding(seq_projection)\n",
+        "    return self.norm_layer(seq_encoder)\n",
+        "\n",
+        "  def encode_decode(self, source, target, source_mask=None, target_mask=None):\n",
+        "    # Projection\n",
+        "    # PyTorch Transformer expects L, N, F\n",
+        "    source_projection = self.preprocess(source).permute(1, 0, 2)\n",
+        "    target_projection = self.preprocess(target).permute(1, 0, 2)\n",
+        "\n",
+        "    outputs = self.transformer(source_projection, target_projection, src_key_padding_mask=source_mask, tgt_mask=target_mask)\n",
+        "\n",
+        "    # Linear\n",
+        "    # Back to N, L, D\n",
+        "    outputs = outputs.permute(1, 0, 2)\n",
+        "    outputs = self.linear_layer(outputs)  # N, L, F\n",
+        "    return outputs\n",
+        "\n",
+        "  def predict(self, source_seq, source_mask=None):\n",
+        "    inputs = source_seq[:, -1:]\n",
+        "    for i in range(self.target_len):\n",
+        "      output = self.encode_decode(source_seq, inputs, source_mask=source_mask, target_mask=self.target_masks[: i + 1, : i + 1])\n",
+        "      output = torch.cat([inputs, output[:, -1:, :]], dim=-2)\n",
+        "      inputs = output.detach()\n",
+        "    outputs = output[:, 1:, :]\n",
+        "    return outputs\n",
+        "\n",
+        "  def forward(self, X, source_mask=None):\n",
+        "    self.target_masks = self.target_masks.type_as(X)\n",
+        "    source_seq = X[:, :self.input_len, :]\n",
+        "\n",
+        "    if self.training:\n",
+        "      shifted_target_seq = X[:, self.input_len - 1:-1, :]\n",
+        "      outputs = self.encode_decode(source_seq, shifted_target_seq, source_mask=source_mask, target_mask=self.target_masks)\n",
+        "    else:\n",
+        "      outputs = self.predict(source_seq, source_mask)\n",
+        "\n",
+        "    return outputs"
+      ],
+      "metadata": {
+        "id": "1pNP9HsCUkWB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Model Training"
+      ],
+      "metadata": {
+        "id": "JH9hnrhvZmjb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pvs-KMpzZpAM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
