--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/04_transformer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO4doInSgxOXQTmPWehcOmv",
+      "authorship_tag": "ABX9TyONg7lWT8j9R7d9E/VjW/kk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "tWAO0Hb3mjb-"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "cDf9HTfwCO31"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -368,7 +368,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,7 +590,7 @@
       "metadata": {
         "id": "Nh9IK0mk31zG"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -632,7 +632,7 @@
       "metadata": {
         "id": "BoyHSBzVwts9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -724,7 +724,7 @@
       "metadata": {
         "id": "vDj68K76vJZ9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +764,7 @@
       "metadata": {
         "id": "NABP2hmO1TdP"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -815,7 +815,7 @@
         "id": "lBY-HqQKKvln",
         "outputId": "fc06df34-2b8a-41ab-b821-815072d4debf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +850,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,7 +905,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -955,7 +955,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1003,7 +1003,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1048,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,7 +1082,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1123,7 +1123,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1206,7 +1206,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1261,7 +1261,7 @@
           "height": 237
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1300,7 +1300,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1334,7 +1334,7 @@
           "height": 237
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1402,7 +1402,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1439,7 +1439,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1517,7 +1517,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1562,7 +1562,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1655,7 +1655,7 @@
       "metadata": {
         "id": "T6QN_jGv7mRa"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1705,7 +1705,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1730,7 +1730,7 @@
         "id": "JaX9fbUt_o53",
         "outputId": "61386788-a7f9-49bc-87e0-44b701df2b70"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1787,7 +1787,7 @@
       "metadata": {
         "id": "yCMgB23RAAAK"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1801,7 +1801,7 @@
       "metadata": {
         "id": "BCWBtc_zCPVN"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1814,7 +1814,7 @@
       "metadata": {
         "id": "wYrMOLeMCld7"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1830,7 +1830,7 @@
         "id": "aanEzPlOC9KC",
         "outputId": "08716b23-2abc-4841-cc96-cf334563eb73"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1875,7 +1875,7 @@
         "id": "U_AvVqdzDSDx",
         "outputId": "e9f2d203-ee1a-4716-d5cb-fdc035057abc"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1903,7 +1903,7 @@
         "id": "XFLRbKiIDypF",
         "outputId": "19569249-8899-4359-fc2d-02fbf9be4258"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1941,7 +1941,7 @@
         "id": "gyo62S1eD5_w",
         "outputId": "2f9c259d-ebaf-4203-d179-b8d7801269de"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2039,7 +2039,7 @@
       "metadata": {
         "id": "1pNP9HsCUkWB"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2067,7 +2067,7 @@
       "metadata": {
         "id": "pvs-KMpzZpAM"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2082,7 +2082,7 @@
       "metadata": {
         "id": "FyEEbzkyadN8"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2096,7 +2096,7 @@
       "metadata": {
         "id": "hfgFzNWxa8dl"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2112,7 +2112,7 @@
           "height": 349
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2148,7 +2148,7 @@
           "height": 354
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2219,7 +2219,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2246,7 +2246,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2273,7 +2273,7 @@
           "height": 280
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2330,7 +2330,7 @@
       "metadata": {
         "id": "mildlAab6R5-"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2368,7 +2368,7 @@
       "metadata": {
         "id": "tNI7ImZC6X-S"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2404,7 +2404,7 @@
       "metadata": {
         "id": "0-_nhYC6vqkG"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2432,7 +2432,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2459,7 +2459,7 @@
           "height": 280
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2492,7 +2492,7 @@
       "metadata": {
         "id": "oi2GWxyMx-WS"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2508,7 +2508,7 @@
           "height": 423
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2573,7 +2573,7 @@
       "metadata": {
         "id": "xUe_ZEhg9vnY"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2603,7 +2603,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2630,7 +2630,7 @@
           "height": 423
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2713,7 +2713,7 @@
           "height": 304
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2744,7 +2744,7 @@
       "metadata": {
         "id": "aUDk9HpDPGAM"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2771,7 +2771,7 @@
           "height": 442
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2809,7 +2809,7 @@
           "height": 448
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2847,7 +2847,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2889,7 +2889,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2916,7 +2916,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2957,7 +2957,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2992,9 +2992,75 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The encoder outputs a sequence of \"hidden states\" (memory), the first of which is used as input to a classifier (\"MLP Head\"). So, the model is all about pre-processing the inputs, our images, using a series of transformations:\n",
+        "\n",
+        "* computing a sequence of patch embeddings\n",
+        "* prepending the same special classifier token `[CLS]` embedding to every sequence\n",
+        "* adding position embedding (or, in our case, position encoding implemented in\n",
+        "our encoder)\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/vision-transformer.png?raw=1)"
+      ],
       "metadata": {
         "id": "BxjWIhntTJkS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ViT(nn.Module):\n",
+        "  def __init__(self, encoder, img_size, in_channels, patch_size, n_outputs):\n",
+        "    super(self).__init__()\n",
+        "\n",
+        "    self.d_model = encoder.d_model\n",
+        "    self.n_outputs = n_outputs\n",
+        "    self.encoder = encoder\n",
+        "\n",
+        "    self.mlp = nn.Linear(encoder.d_model, n_outputs)\n",
+        "    self.patch_embedding = PatchEmbedding(img_size, patch_size, in_channels, encoder.d_model)\n",
+        "    self.cls_token = nn.Parameter(torch.zeros(1, 1, encoder.d_model))\n",
+        "\n",
+        "  def preprocess(self, X):\n",
+        "    # Patch embeddings\n",
+        "    # N, L, F -> N, L, D\n",
+        "    source = self.patch_embedding(X)\n",
+        "    # Special classifier token\n",
+        "    # 1, 1, D -> N, 1,\n",
+        "    cls_tokens = self.cls_token.expand(X.size(0), -1, -1)\n",
+        "    # Concatenates CLS tokens -> N, 1 + L, D\n",
+        "    source = torch.cat((cls_tokens, source), dim=1)\n",
+        "    return source\n",
+        "\n",
+        "  def encode(self, source):\n",
+        "    # Encoder generates \"hidden states\"\n",
+        "    states = self.encoder(source)\n",
+        "    # Gets state from first token: CLS\n",
+        "    cls_state = states[:, 0]  # N, 1, D\n",
+        "    return cls_state\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    # preproccessing\n",
+        "    source = self.preprocess(X)\n",
+        "    # Featurizer\n",
+        "    cls_state = self.encode(source)\n",
+        "    # Classifier\n",
+        "    output = self.mlp(cls_state)  # N, 1, outputs\n",
+        "    return output"
+      ],
+      "metadata": {
+        "id": "ohZCnqmjSh8O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Model Training"
+      ],
+      "metadata": {
+        "id": "KDjg6nBwXJhz"
       }
     },
     {
